# smartllm

./: .gitignore  CHANGELOG.md  DOCUMENTATION_IMPROVEMENTS.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  RESPONSE_API.md  TEST_REFACTORING.md  debug_bedrock.py  debug_cache.py  debug_l2_cache.py  example.py  multi_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streaming_example.py  test_simple.py
.ai-docs/: aioboto3.md  cacherator.md  dynamorator.md  ghostscraper.md  logorator.md  openai.md  pydantic.md  searcherator.md
examples/: caching.py  caching_dynamo.py  list_bedrock_sonnet_models.py  on_progress_callback.py  reasoning_structured_output.py  test_bedrock_sonnet45.py
smartllm/: __init__.py  anthropic_provider.py  anthropic_streamer.py  async_llm.py  async_provider_manager.py  async_smart_llm.py  config.py  defaults.py  example.py  llm_provider.py  llm_streamer.py  models.py  openai_provider.py  perplexity_provider.py  provider_manager.py  smart_llm.py  stream_utils.py  streaming_llm.py
smartllm/async_providers/: __init__.py  async_anthropic_provider.py  async_base.py  async_openai_provider.py  base.py
smartllm/bedrock/: __init__.py  bedrock_client.py  config.py
smartllm/cache/: manager.py
smartllm/execution/: __ini__.py  executor.py  state.py
smartllm/openai/: __init__.py  chat_completions_api.py  config.py  openai_client.py  responses_api.py
smartllm/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  perplexity_provider.py
smartllm/streaming/: __init__.py  background.py  streamer.py
smartllm/unified/: __init__.py  client.py  config.py
smartllm/utils/: __init__.py  (+5 more)
tests/: conftest.py  models.toml
(+8 files in other folders)
