[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "smartllm"
version = "0.1.0"
description = "A unified async Python wrapper for multiple LLM providers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Arved Klöhn", email = "arved.kloehn@gmail.com"}
]
keywords = ["llm", "openai", "bedrock", "claude", "gpt", "async", "ai", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
bedrock = ["aioboto3>=12.0.0"]
all = ["openai>=1.0.0", "aioboto3>=12.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/Redundando/smartllm"
Repository = "https://github.com/Redundando/smartllm"
Issues = "https://github.com/Redundando/smartllm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartllm*"]
exclude = ["tests*"]
